package ancien.dungeongame.Animation;

import com.badlogic.gdx.graphics.g2d.Animation;

import java.util.ArrayList;

public class GameObjectAnimation {

    ArrayList<Animation> listAnimation;

    public GameObjectAnimation(ArrayList<Animation> listAnimation) {
        this.listAnimation = listAnimation;
    }
}
