package level.tiles;

import com.badlogic.gdx.graphics.g2d.SpriteBatch;
import level.Room;

public class Door extends Crossable{
    private Room salleLiee;

    @Override
    public void render(SpriteBatch batch, int x, int y) {

    }
}
