@startuml

abstract class GameObject {
    GameObject(eventManager : EventManager, animationManager : AnimationManager)
}



abstract class GameCharacter {
    - health : int
    - speedMeterPerSecond : float
    - body : Body
    - contactDamages : int
    - meleeDamages : int
    - stateMachine : State
    + move(vecteur : Vector2) : void
    + getPosition() : Vector2
    + attack(target : GameCharacter) : void
    + takeDamage(amount : int) : void
}
GameCharacter --|> GameObject


class Player {
    applyPowerUp(powerUp : PowerUp) : void
}
Player --|> GameCharacter


class Monster {
    patrol()
}
Monster --|> GameCharacter



class PowerUp {
    activate()
    deactivate()
}
PowerUp --|> GameObject

class Trap {

}

class Teleporter {

}
Teleporter --|> GameObject

class Level {
    - world : World
    - viewport : Viewport
    - player : Player
    - loadRoom(room : Room)
    - unloadRoom(room : Room)
    - loadPlayerCharacter() : void
    - createBoundary(x : float, y : float, width: float, height :float)
    + getCamera() : OrthographicCamera
    + getPlayer() : Player
    + update(delta : float) : void
    + getWorld() : World
    + getViewport() : Viewport
    + getPlayer() : Player
    + dispose() : void
}

Level "1"--"1..*" Room : has >
Level "1"--"1" Player : contains >

class Room {
    spawnMonster()
}

Room -- "0..*" PowerUp : may have >
Room -- "1..*" Door : has >
Room -- "0..*" Trap : may have >
Room -- "0..*" Monster : may have >

class Door {

}


class DungeonGame {
    create() : void
    setInputProcessor(inputProcessor : InputProcessor) : void
    dispose() : void
}
DungeonGame --|> Game
DungeonGame "1"--"1" ScreenManager
DungeonGame *-- InputProcessor : -currentInputProcessor

class ScreenManager {
    changeScreen(screen : GameScreen) : void
    getCurrentScreen()
}
ScreenManager -- GameScreen : -currentScreen >
ScreenManager -- GameOverScreen : has >
ScreenManager -- WorldScreen : has >
ScreenManager -- MainMenuScreen : has >
ScreenManager -- PauseScreen : has >
ScreenManager -- EndGameScreen : has >

abstract GameScreen {
    + getInputProcessor() : InputProcessor
    + setInputProcessor() : void
}
GameScreen --|> Screen

MainMenuScreen --|> GameScreen
WorldScreen --|> GameScreen
PauseScreen --|> GameScreen
GameOverScreen --|> GameScreen
EndGameScreen --|> GameScreen

class MainMenuScreen {

}


class WorldScreen {
    - moveLeft : boolean
    - moveRight : boolean
    - moveUp : boolean
    - moveDown : boolean
    + setMoveLeft(state : boolean) : void
    + setMoveRight(state : boolean) : void
    + setMoveUp(state : boolean) : void
    + setMoveDown(state : boolean) : void
}
WorldScreen *-- Level : -currentLevel

class PauseScreen {

}

class GameOverScreen {

}

class EndGameScreen {

}

class WorldScreenInputProcessor {
    WorldScreenInputProcessor(worldScreen : WorldScreen)
}
WorldScreenInputProcessor ..|> InputProcessor
WorldScreenInputProcessor *-- WorldScreen
interface InputProcessor

 ScreenManager *-- WorldScreenInputProcessor 

GlobalContactListener --|> ContactListener

interface ContactListener

class GlobalContactListener{

}

Level "0..1"--"1" GlobalContactListener  

class Animation2D {

}

class GameObjectAnimation {
    
}

GameObjectAnimation "1"--"0..*" Animation2D  

GameObject "1"--"1" GameObjectAnimation  

@enduml